apps/banking-demo/overlay/istio/07-web-ui-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-ui-v2-deployment
  namespace: test-app
spec:
  selector:
    matchLabels:
      app: web-ui
      version: v2
  replicas: 1
  template:
    metadata:
      labels:
        app: web-ui
        version: v2
    spec:
      containers:
      - name: web-ui
        image: harbor.dorn.gorke.ml/banking-demo/web-ui:0.0.1-SNAPSHOT
        imagePullPolicy: Always
